--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@sap/cds": "^6",
     "express": "^4",
-    "hdb": "^0.19.0"
+    "hdb": "^0.19.0",
+    "@sap/xssec": "^3",
+    "passport": "^0"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.108.5",
@@ -26,7 +28,8 @@
   "cds": {
     "requires": {
       "[production]": {
-        "db": "hana-cloud"
+        "db": "hana-cloud",
+        "auth": "xsuaa"
       },
       "db": "sql"
     }
