--- a/app/mitigations/webapp/manifest.json
+++ b/app/mitigations/webapp/manifest.json
@@ -1,146 +1,154 @@
 {
-  "_version": "1.49.0",
+  "_version": "1.32.0",
   "sap.app": {
-    "id": "ns.mitigations",
-    "type": "application",
-    "i18n": "i18n/i18n.properties",
-    "applicationVersion": {
-      "version": "0.0.1"
-    },
-    "title": "{{appTitle}}",
-    "description": "{{appDescription}}",
-    "resources": "resources.json",
-    "sourceTemplate": {
-      "id": "@sap/generator-fiori:worklist",
-      "version": "1.9.5",
-      "toolsId": "eda444fb-eeca-4d6b-bc15-c1a9065c9232"
-    },
-    "dataSources": {
-      "mainService": {
-        "uri": "/service/risk/",
-        "type": "OData",
-        "settings": {
-          "annotations": [],
-          "localUri": "localService/metadata.xml",
-          "odataVersion": "4.0"
-        }
+      "id": "ns.mitigations",
+      "type": "application",
+      "i18n": "i18n/i18n.properties",
+      "title": "{{appTitle}}",
+      "description": "{{appDescription}}",
+      "applicationVersion": {
+          "version": "1.0.0"
+      },
+      "ach": "set-ach",
+      "resources": "resources.json",
+      "dataSources": {
+          "mainService": {
+              "uri": "/service/risk/",
+              "type": "OData",
+              "settings": {
+                  "odataVersion": "4.0",
+                  "localUri": "localService/metadata.xml"
+              }
+          }
+      },
+      "crossNavigation": {
+          "inbounds": {
+              "Mitigations-display": {
+                  "signature": {
+                      "parameters": {},
+                      "additionalParameters": "allowed"
+                  },
+                  "semanticObject": "Mitigations",
+                  "action": "display"
+              }
+          }
       }
-    }
+  },
+  "sap.fiori": {
+      "registrationIds": [
+          "20618182-bcc1-43a0-a644-1ab298ff1824"
+      ],
+      "archeType": "transactional"
+  },
+  "sap.cloud": {
+      "public": true,
+      "service": "cpapp.service"
   },
   "sap.ui": {
-    "technology": "UI5",
-    "icons": {
-      "icon": "",
-      "favIcon": "",
-      "phone": "",
-      "phone@2": "",
-      "tablet": "",
-      "tablet@2": ""
-    },
-    "deviceTypes": {
-      "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
+      "technology": "UI5",
+      "icons": {
+          "icon": "sap-icon://task",
+          "favIcon": "",
+          "phone": "",
+          "phone@2": "",
+          "tablet": "",
+          "tablet@2": ""
+      },
+      "deviceTypes": {
+          "desktop": true,
+          "tablet": true,
+          "phone": true
+      }
   },
   "sap.ui5": {
-    "flexEnabled": true,
-    "dependencies": {
-      "minUI5Version": "1.113.0",
-      "libs": {
-        "sap.m": {},
-        "sap.ui.core": {},
-        "sap.f": {},
-        "sap.suite.ui.generic.template": {},
-        "sap.ui.comp": {},
-        "sap.ui.generic.app": {},
-        "sap.ui.table": {},
-        "sap.ushell": {}
-      }
-    },
-    "contentDensities": {
-      "compact": true,
-      "cozy": true
-    },
-    "models": {
-      "i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "settings": {
-          "bundleName": "ns.mitigations.i18n.i18n"
-        }
+      "rootView": {
+          "viewName": "ns.mitigations.view.App",
+          "type": "XML",
+          "async": true,
+          "id": "app"
       },
-      "": {
-        "dataSource": "mainService",
-        "preload": true,
-        "settings": {
-          "synchronizationMode": "None",
-          "operationMode": "Server",
-          "autoExpandSelect": true,
-          "earlyRequests": true
-        }
-      }
-    },
-    "resources": {
-      "css": []
-    },
-    "routing": {
-      "config": {
-        "routerClass": "sap.m.routing.Router",
-        "viewType": "XML",
-        "viewPath": "ns.mitigations.view",
-        "controlId": "app",
-        "controlAggregation": "pages",
-        "bypassed": {
-          "target": [
-            "notFound"
-          ]
-        },
-        "async": true
+      "dependencies": {
+          "minUI5Version": "1.95.0",
+          "libs": {
+              "sap.ui.core": {},
+              "sap.m": {},
+              "sap.f": {}
+          }
       },
-      "routes": [
-        {
-          "pattern": "",
-          "name": "worklist",
-          "target": [
-            "worklist"
-          ]
-        },
-        {
-          "pattern": "Mitigations/{objectId}",
-          "name": "object",
-          "target": [
-            "object"
-          ]
-        }
-      ],
-      "targets": {
-        "worklist": {
-          "viewName": "Worklist",
-          "viewId": "worklist",
-          "viewLevel": 1,
-          "title": "{i18n>worklistViewTitle}"
-        },
-        "object": {
-          "viewName": "Object",
-          "viewId": "object",
-          "viewLevel": 2,
-          "title": "{i18n>objectViewTitle}"
-        },
-        "objectNotFound": {
-          "viewName": "ObjectNotFound",
-          "viewId": "objectNotFound"
-        },
-        "notFound": {
-          "viewName": "NotFound",
-          "viewId": "notFound"
-        }
+      "contentDensities": {
+          "compact": true,
+          "cozy": true
+      },
+      "models": {
+          "i18n": {
+              "type": "sap.ui.model.resource.ResourceModel",
+              "settings": {
+                  "bundleName": "ns.mitigations.i18n.i18n"
+              }
+          },
+          "": {
+              "dataSource": "mainService",
+              "preload": true,
+              "settings": {
+                  "operationMode": "Server",
+                  "groupId": "$direct",
+                  "synchronizationMode": "None",
+                  "autoExpandSelect": true
+              }
+          }
+      },
+      "routing": {
+          "config": {
+              "routerClass": "sap.m.routing.Router",
+              "viewType": "XML",
+              "viewPath": "ns.mitigations.view",
+              "controlId": "app",
+              "controlAggregation": "pages",
+              "bypassed": {
+                  "target": [
+                      "notFound"
+                  ]
+              },
+              "async": true
+          },
+          "routes": [
+              {
+                  "pattern": "",
+                  "name": "worklist",
+                  "target": [
+                      "worklist"
+                  ]
+              },
+              {
+                  "pattern": "Mitigations{objectId}",
+                  "name": "object",
+                  "target": [
+                      "object"
+                  ]
+              }
+          ],
+          "targets": {
+              "worklist": {
+                  "viewName": "Worklist",
+                  "viewId": "worklist",
+                  "viewLevel": 1,
+                  "title": "{i18n>worklistViewTitle}"
+              },
+              "object": {
+                  "viewName": "Object",
+                  "viewId": "object",
+                  "viewLevel": 2,
+                  "title": "{i18n>objectViewTitle}"
+              },
+              "objectNotFound": {
+                  "viewName": "ObjectNotFound",
+                  "viewId": "objectNotFound"
+              },
+              "notFound": {
+                  "viewName": "NotFound",
+                  "viewId": "notFound"
+              }
+          }
       }
-    },
-    "rootView": {
-      "viewName": "ns.mitigations.view.App",
-      "type": "XML",
-      "async": true,
-      "id": "app"
-    }
   }
 }
