--- a/app/risks/webapp/manifest.json
+++ b/app/risks/webapp/manifest.json
@@ -1,28 +1,38 @@
 {
-    "_version": "1.49.0",
+    "_version": "1.32.0",
     "sap.app": {
         "id": "ns.risks",
         "type": "application",
         "i18n": "i18n/i18n.properties",
         "applicationVersion": {
-            "version": "0.0.1"
+            "version": "1.0.0"
         },
         "title": "{{appTitle}}",
         "description": "{{appDescription}}",
-        "resources": "resources.json",
-        "sourceTemplate": {
-            "id": "@sap/generator-fiori:lrop",
-            "version": "1.9.5",
-            "toolsId": "62a7aa48-3ed2-42cf-8419-571994f41d81"
-        },
         "dataSources": {
             "mainService": {
                 "uri": "/service/risk/",
                 "type": "OData",
                 "settings": {
-                    "annotations": [],
-                    "localUri": "localService/metadata.xml",
                     "odataVersion": "4.0"
+                }
+            }
+        },
+        "offline": false,
+        "resources": "resources.json",
+        "sourceTemplate": {
+            "id": "ui5template.fiorielements.v4.lrop",
+            "version": "1.0.0"
+        },
+        "crossNavigation": {
+            "inbounds": {
+                "Risks-display": {
+                    "signature": {
+                        "parameters": {},
+                        "additionalParameters": "allowed"
+                    },
+                    "semanticObject": "Risks",
+                    "action": "display"
                 }
             }
         }
@@ -44,26 +54,25 @@
         }
     },
     "sap.ui5": {
-        "flexEnabled": true,
+        "resources": {
+            "js": [],
+            "css": []
+        },
         "dependencies": {
-            "minUI5Version": "1.113.0",
+            "minUI5Version": "1.95.0",
             "libs": {
-                "sap.m": {},
                 "sap.ui.core": {},
-                "sap.ushell": {},
                 "sap.fe.templates": {}
             }
         },
-        "contentDensities": {
-            "compact": true,
-            "cozy": true
-        },
         "models": {
+            "@i18n": {
+                "type": "sap.ui.model.resource.ResourceModel",
+                "uri": "i18n/i18n.properties"
+            },
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
-                "settings": {
-                    "bundleName": "ns.risks.i18n.i18n"
-                }
+                "uri": "i18n/i18n.properties"
             },
             "": {
                 "dataSource": "mainService",
@@ -74,14 +83,7 @@
                     "autoExpandSelect": true,
                     "earlyRequests": true
                 }
-            },
-            "@i18n": {
-                "type": "sap.ui.model.resource.ResourceModel",
-                "uri": "i18n/i18n.properties"
             }
-        },
-        "resources": {
-            "css": []
         },
         "routing": {
             "routes": [
@@ -128,14 +130,26 @@
                 }
             }
         },
-        "extends": {
-            "extensions": {
-                "sap.ui.controllerExtensions": {}
-            }
+        "contentDensities": {
+            "compact": true,
+            "cozy": true
         }
     },
+    "sap.platform.abap": {
+        "_version": "1.1.0",
+        "uri": ""
+    },
+    "sap.platform.hcp": {
+        "_version": "1.1.0",
+        "uri": ""
+    },
     "sap.fiori": {
+        "_version": "1.1.0",
         "registrationIds": [],
         "archeType": "transactional"
+    },
+    "sap.cloud": {
+        "public": true,
+        "service": "cpapp.service"
     }
 }
